--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
       <section class="card" id="javascript-section">
       <h2>Javascript </h2>
           <ul>
-          <li>Enter your Javascript Notes here</li>
+            <ul>
+              <li>A variable is a named container that allows us to store data in our code.</li>
+              <li>Control flow is the order in which a computer executes code in a script.</li>
+              <li>An array is a list of items that we can sort through or randomise.</li>
+            </ul>
           </ul>
       </section>
     </main>
